# coin

./: CMakeLists.txt  README.md  attention_hip.cpp  attention_hip.hpp  bert_components_hip.cpp  bert_components_hip.hpp  common_hip.cpp  common_hip.hpp  d.py  hip_kernels.cpp  hip_kernels.hpp  language_model_hip.cpp  language_model_hip.hpp  nn_layers_hip.cpp  nn_layers_hip.hpp  optimizer_hip.cpp  optimizer_hip.hpp  requirements.txt
src/core/: dataset.cpp  dataset.hpp  tokenizer.cpp  tokenizer.hpp
src/models/: teacher.hip.cpp  teacher.hpp
src/scripts/: aggregate_data.cpp  build_vocab.cpp  pretrain.cpp  run_full_training.cpp  split_data.cpp
src/utils/: data_loader.cpp  data_loader.hpp
